# stagedoer

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  cli.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  categories.py  task_types.py  tasks.py
docs/: app.js  index.html  main.py
docs/favicon/: site.webmanifest
static/: app.js  index.html  style.css
