[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stagedoer"
version = "0.1.0"
description = "Multi-stage todo list web app"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.scripts]
stagedoer = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
